--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,7 @@ name = "kernel"
 path = "src/main.rs"
 
 [dependencies]
+
+# [target.aarch64-unknown-none-softfloat.dependencies]
+[target.'cfg(target_arch = "aarch64")'.dependencies]
+aarch64-cpu = "11.1.0"
